New Features and Important Changes in GammaLib 00-09-00

Author(s) : Juergen Knoedlseder

10 September 2014


1. Introduction
---------------
This document briefly summarizes module by module the most important
changes made since the last release of GammaLib.


2. Public interface modifications
---------------------------------
The following classes have been renamed:
* GCTAModelBackground => GCTAModelCubeBackground
* GCTAModelInstBackground => GCTAModelIrfBackground
* GCTAResponse => GCTAResponseIrf

The following methods have been renamed:
* GIntegral::romb() => GIntegral::romberg()

The GObservation::response() method now returns a pointer to GResponse
instead of a reference.

The GCTAObservation::load(GFits&) and GCTAObservation::save(GFits&)
methods have been remaned to read() and write().

A classname() method has been added to all classes that returns the name
of the GammaLib class.


3. Configuration
-----------------
None


4. Application module
---------------------
The logfile name is now always parsed in the parameter file before it is
employed. This guarantees that a logfile parameter change is taken into
account at any stage. This corrects a bug where the logfile name change
was not taken into account when running tools under Python. 


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
None


7. Linear algebra module
------------------------
None


8. Model module
---------------
A division by zero error occured in GModelSpectralPlaw2::eval_gradients
in case that the integral was zero. The code has been changed to avoid
this situation.

The map cube in GModelSpatialDiffuseCube is now only loaded from the file
when needed. This allows manipulating GModelSpatialDiffuseCube objects
that describe huge map cubes without need for loading the map cubes into
memory. This property is useful for Fermi/LAT analysis.

Implement GModelSpectralSuperExpPlaw class to model a super exponentially
cut off power law spectral functions.
