@@ -136,8 +136,8 @@ public:
     void                name(const std::string& name);
     const double&       ts(void) const;
     void                ts(const double& ts);
-    const bool&      tscalc(void) const;
-    void                  tscalc(const bool& tscalc);
+    const bool&         tscalc(void) const;
+    void                tscalc(const bool& tscalc);
     std::string         instruments(void) const;
     void                instruments(const std::string& instruments);
     GModelPar           scale(const std::string& instrument) const;
@@ -163,7 +163,7 @@ protected:
     std::vector<std::string> m_ids;          //!< Identifiers to which model applies
     std::vector<GModelPar*>  m_pars;         //!< Pointers to all model parameters
     bool                     m_has_ts;       //!< Signals if TS is available
-    bool                     m_tscalc;        //!< Signals if TS should be computed
+    bool                     m_tscalc;       //!< Signals if TS should be computed
     double                   m_ts;           //!< Test Statistic of the model
 };
 
@@ -277,12 +277,12 @@ void GModel::ts(const double& ts)
 
 
 /***********************************************************************//**
- * @brief Return flag wether TS value should be computed Statistic value
+ * @brief Return flag whether TS value should be computed Statistic value
  *
- * @return boolean flag to compute TS value
+ * @return Boolean flag to compute TS value
  *
- * Returns the flag wether the TS value should be computed for this
- *  model.
+ * Returns the flag whether the TS value should be computed for this
+ * model.
  ***************************************************************************/
 inline
 const bool& GModel::tscalc(void) const
@@ -296,17 +296,13 @@ const bool& GModel::tscalc(void) const
  *
  * @param[in] ts Test Statistic value.
  *
- * Set the flag wether the TS value should be computed by ctlike.
+ * Set the flag whether the TS value should be computed by ctlike.
  ***************************************************************************/
 inline
 void GModel::tscalc(const bool& tscalc)
 {
-    m_tscalc     = tscalc;
+    m_tscalc = tscalc;
     return;
 }
-
-
-
-
 
 #endif /* GMODEL_HPP */
